--- a/animationtransition.scss
+++ b/animationtransition.scss
@@ -1,20 +1,48 @@
 @mixin animation($value) {
-	-moz-animation: #{$value};
-	-o-animation: #{$value};
-	-webkit-animation: #{$value};
-	animation: #{$value};
+	-moz-animation: $value;
+	-o-animation: $value;
+	-webkit-animation: $value;
+	animation: $value;
 }
 
 @mixin keyframes($name) {
-	@-moz-keyframes #{$name} { @content; }
-	@-o-keyframes #{$name} { @content; }
-	@-webkit-keyframes #{$name} { @content; }
-	@keyframes #{$name} { @content; }
+	@-moz-keyframes $name { @content; }
+	@-o-keyframes $name { @content; }
+	@-webkit-keyframes $name { @content; }
+	@keyframes $name { @content; }
 }
 
-@mixin transition($value) {
-	-moz-transition: #{$value};
-	-o-transition: #{$value};
-	-webkit-transition: #{$value};
-	transition: #{$value};
+@mixin transition($value...) {
+	-moz-transition: $value;
+	-o-transition: $value;
+	-webkit-transition: $value;
+	transition: $value;
+}
+
+@mixin transition-delay($value...) {
+	-moz-transition-delay: $value;
+	-o-transition-delay: $value;
+	-webkit-transition-delay: $value;
+	transition-delay: $value;
+}
+
+@mixin transition-duration($value...) {
+	-moz-transition-duration: $value;
+	-o-transition-duration: $value;
+	-webkit-transition-duration: $value;
+	transition-duration: $value;
+}
+
+@mixin transition-property($value...) {
+	-moz-transition-property: $value;
+	-o-transition-property: $value;
+	-webkit-transition-property: $value;
+	transition-property: $value;
+}
+
+@mixin transition-timing-function($value...) {
+	-moz-transition-timing-function: $value;
+	-o-transition-timing-function: $value;
+	-webkit-transition-timing-function: $value;
+	transition-timing-function: $value;
 }
