retinaImage() now has a default width of background-size: 100%

--- a/retina.scss
+++ b/retina.scss
@@ -1,4 +1,4 @@
-@mixin retinaImage($src,$width) {
+@mixin retinaImage($src,$width: 100%) {
 	@media (min--moz-device-pixel-ratio: 1.5),
 		(-o-min-device-pixel-ratio: 3/2),
 		(-webkit-min-device-pixel-ratio: 1.5),
