Setting line-height: 1 on all resetted elements, should be fine

--- a/resetbase.scss
+++ b/resetbase.scss
@@ -14,6 +14,7 @@ a,abbr,body,button,fieldset,form,h1,h2,h3,h4,h5,h6,img,label,legend,li,ol,p,td,t
 	border: 0;
 	font-size: 100%;
 	font-weight: normal;
+	line-height: 1;
 	list-style: none;
 	margin: 0;
 	outline: 0;
