Big update for Sass 3.4 - now required as a minimum, also dropping IE8 support and various implementation changes.

--- a/fontface.scss
+++ b/fontface.scss
@@ -1,4 +1,4 @@
-@mixin fontFace($family,$src,$weight: normal,$style: normal) {
+@mixin fontFace($family,$src,$style: normal,$weight: normal) {
 	@font-face {
 		font-family: $family;
 		src: url('#{$src}.eot'); // IE9 compat
