--- a/animationtransition.scss
+++ b/animationtransition.scss
@@ -1,47 +1,91 @@
+// -- animation --
 @mixin animation($value) {
-	-moz-animation: $value;
 	-o-animation: $value;
 	-webkit-animation: $value;
 	animation: $value;
 }
 
-@mixin keyframes($name) {
-	@-moz-keyframes $name { @content; }
-	@-o-keyframes $name { @content; }
-	@-webkit-keyframes $name { @content; }
-	@keyframes $name { @content; }
+@mixin animation-delay($value) {
+	-o-animation-delay: $value;
+	-webkit-animation-delay: $value;
+	animation-delay: $value;
 }
 
+@mixin animation-direction($value) {
+	-o-animation-direction: $value;
+	-webkit-animation-direction: $value;
+	animation-direction: $value;
+}
+
+@mixin animation-duration($value) {
+	-o-animation-duration: $value;
+	-webkit-animation-duration: $value;
+	animation-duration: $value;
+}
+
+@mixin animation-fill-mode($value) {
+	-o-animation-fill-mode: $value;
+	-webkit-animation-fill-mode: $value;
+	animation-fill-mode: $value;
+}
+
+@mixin animation-iteration-count($value) {
+	-o-animation-iteration-count: $value;
+	-webkit-animation-iteration-count: $value;
+	animation-iteration-count: $value;
+}
+
+@mixin animation-name($value) {
+	-o-animation-name: $value;
+	-webkit-animation-name: $value;
+	animation-name: $value;
+}
+
+@mixin animation-play-state($value) {
+	-o-animation-play-state: $value;
+	-webkit-animation-play-state: $value;
+	animation-play-state: $value;
+}
+
+@mixin animation-timing-function($value) {
+	-o-animation-timing-function: $value;
+	-webkit-animation-timing-function: $value;
+	animation-timing-function: $value;
+}
+
+// -- animation - keyframes --
+@mixin keyframes($name) {
+	@-o-keyframes #{$name} { @content; }
+	@-webkit-keyframes #{$name} { @content; }
+	@keyframes #{$name} { @content; }
+}
+
+// -- transition --
 @mixin transition($value...) {
-	-moz-transition: $value;
 	-o-transition: $value;
 	-webkit-transition: $value;
 	transition: $value;
 }
 
-@mixin transition-delay($value...) {
-	-moz-transition-delay: $value;
+@mixin transition-delay($value) {
 	-o-transition-delay: $value;
 	-webkit-transition-delay: $value;
 	transition-delay: $value;
 }
 
-@mixin transition-duration($value...) {
-	-moz-transition-duration: $value;
+@mixin transition-duration($value) {
 	-o-transition-duration: $value;
 	-webkit-transition-duration: $value;
 	transition-duration: $value;
 }
 
 @mixin transition-property($value...) {
-	-moz-transition-property: $value;
 	-o-transition-property: $value;
 	-webkit-transition-property: $value;
 	transition-property: $value;
 }
 
-@mixin transition-timing-function($value...) {
-	-moz-transition-timing-function: $value;
+@mixin transition-timing-function($value) {
 	-o-transition-timing-function: $value;
 	-webkit-transition-timing-function: $value;
 	transition-timing-function: $value;
