--- a/respondwidth.scss
+++ b/respondwidth.scss
@@ -2,14 +2,41 @@
 	@media screen and #{$query} { @content; }
 }
 
-@mixin respondWidthFrom($widthFrom) {
-	@media screen and (min-width: $widthFrom + 1) { @content; }
+@mixin respondWidthFrom($key) {
+	@if (map-has-key($respondWidthMap,$key)) {
+		@media screen and
+			(min-width: map-get($respondWidthMap,$key) + 1) { @content; }
+	} @else {
+		@error 'Invalid $respondWidthMap \'from\' key: #{$key}';
+	}
 }
 
-@mixin respondWidthUpTo($widthUpTo) {
-	@media screen and (max-width: #{$widthUpTo}) { @content; }
+@mixin respondWidthUpTo($key) {
+	@if (map-has-key($respondWidthMap,$key)) {
+		@media screen and
+			(max-width: map-get($respondWidthMap,$key)) { @content; }
+	} @else {
+		@error 'Invalid $respondWidthMap \'up to\' key: #{$key}';
+	}
 }
 
-@mixin respondWidthFromUpTo($widthFrom,$widthUpTo) {
-	@media screen and (min-width: $widthFrom + 1) and (max-width: #{$widthUpTo}) { @content; }
+@mixin respondWidthFromUpTo($keyFrom,$keyUpTo) {
+	@if (map-has-key($respondWidthMap,$keyFrom)) {
+		@if (map-has-key($respondWidthMap,$keyUpTo)) {
+			$widthFrom: map-get($respondWidthMap,$keyFrom);
+			$widthUpTo: map-get($respondWidthMap,$keyUpTo);
+
+			@if ($widthFrom < $widthUpTo) {
+				@media screen and
+					(min-width: $widthFrom + 1) and
+					(max-width: $widthUpTo) { @content; }
+			} @else {
+				@error '$respondWidthMap key \'from\' (#{$keyFrom}) must be lower than key \'up to\' (#{$keyUpTo})';
+			}
+		} @else {
+			@error 'Invalid $respondWidthMap \'up to\' key: #{$keyUpTo}';
+		}
+	} @else {
+		@error 'Invalid $respondWidthMap \'from\' key: #{$keyFrom}';
+	}
 }
