--- a/retina.scss
+++ b/retina.scss
@@ -1,20 +1,14 @@
 @mixin retinaImage($src,$width: 100%) {
-	@media (min--moz-device-pixel-ratio: 1.5),
-		(-o-min-device-pixel-ratio: 3/2),
-		(-webkit-min-device-pixel-ratio: 1.5),
-		(min-device-pixel-ratio: 1.5),
-		(min-resolution: 144dpi),
-		(min-resolution: 1.5dppx) {
+	@media only screen and (-webkit-min-device-pixel-ratio: 1.3),
+		only screen and (-o-min-device-pixel-ratio: 13/10),
+		only screen and (min-resolution: 120dpi) {
 			background-image: url(#{$src});
 			background-size: $width;
 		}
 }
 
 @mixin retinaOnly() {
-	@media (min--moz-device-pixel-ratio: 1.5),
-		(-o-min-device-pixel-ratio: 3/2),
-		(-webkit-min-device-pixel-ratio: 1.5),
-		(min-device-pixel-ratio: 1.5),
-		(min-resolution: 144dpi),
-		(min-resolution: 1.5dppx) { @content; }
+	@media only screen and (-webkit-min-device-pixel-ratio: 1.3),
+		only screen and (-o-min-device-pixel-ratio: 13/10),
+		only screen and (min-resolution: 120dpi) { @content; }
 }
