--- a/fontface.scss
+++ b/fontface.scss
@@ -1,11 +1,15 @@
-@mixin fontFace($family,$src,$style: normal,$weight: normal) {
+@mixin fontFace($family, $src, $style: normal, $weight: normal) {
 	@font-face {
 		font-family: $family;
 		src: url('#{$src}.eot'); // IE9 compat
-		src: url('#{$src}.eot?#iefix') format('embedded-opentype'), // IE8 and below
-			url('#{$src}.woff') format('woff'), // standards
-			url('#{$src}.ttf') format('truetype'), // Safari, Android, iOS
-			url('#{$src}.svg##{$family}') format('svg'); // legacy iOS
+		// IE8 and below
+		src: url('#{$src}.eot?#iefix') format('embedded-opentype'),
+		// standards
+		url('#{$src}.woff') format('woff'),
+		// Safari, Android, iOS
+		url('#{$src}.ttf') format('truetype'),
+		// legacy iOS
+		url('#{$src}.svg##{$family}') format('svg');
 
 		font-style: $style;
 		font-weight: $weight;
