--- a/resetbase.scss
+++ b/resetbase.scss
@@ -8,7 +8,28 @@ $resetBase_baseFontFamily: sans-serif !default;
 	box-sizing: border-box;
 }
 
-a,abbr,body,button,fieldset,form,h1,h2,h3,h4,h5,h6,iframe,img,label,legend,li,ol,p,td,th,ul {
+a,
+abbr,
+body,
+button,
+fieldset,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+iframe,
+img,
+label,
+legend,
+li,
+ol,
+p,
+td,
+th,
+ul {
 	border: 0;
 	font-size: 100%;
 	font-weight: normal;
@@ -20,17 +41,26 @@ a,abbr,body,button,fieldset,form,h1,h2,h3,h4,h5,h6,iframe,img,label,legend,li,ol
 	vertical-align: baseline;
 }
 
-a,abbr {
+a,
+abbr {
 	font-weight: inherit;
 }
 
-input,select,textarea {
+input,
+select,
+textarea {
 	font-size: 100%;
 	margin: 0;
 }
 
 // -- base --
-body,button,input,select,td,textarea,th {
+body,
+button,
+input,
+select,
+td,
+textarea,
+th {
 	color: $resetBase_baseColor;
 	font-family: $resetBase_baseFontFamily;
 }
@@ -79,5 +109,5 @@ body {
 
 // -- base - touch device tap highlight remove --
 %tapHighlightRemove {
-	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
