--- a/vendor.scss
+++ b/vendor.scss
@@ -1,13 +1,12 @@
-$vendorLinerGradientLegacyAngleList: (
-	to bottom: top,
-	to bottom left: top right,
-	to bottom right: top left,
-	to left: right,
-	to right: left,
-	to top: bottom,
-	to top left: bottom right,
-	to top right: bottom left
-);
+$vendorLinerGradientLegacyAngleList: (to bottom: top,
+		to bottom left: top right,
+		to bottom right: top left,
+		to left: right,
+		to right: left,
+		to top: bottom,
+		to top left: bottom right,
+		to top right: bottom left,
+	);
 
 @mixin backface-visibility($value) {
 	-webkit-backface-visibility: $value;
